--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="select-container">
-    <select class="breed-select is-hidden"></select>
+    <select class="breed-select"></select>
 
     <p class="loader">Loading data, please wait...</p>
     <p class="error is-hidden">
